<resources>
    <string name="app_name">Asif</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tt01">Asif Hingora</string>
    <string name="tt02">asif.silverwing@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tt03">Logout</string>
    <string name="tt04">About Us</string>
    <string name="tt05">Contact Us</string>
    <string name="tt06">Category</string>
    <string name="tt07">Tips</string>
    <string name="tt08">Doctor</string>
    <string name="tt09">Communicate</string>
    <string name="tt10">Name</string>
    <string name="tt11">Send</string>
    <string name="tt12">Profile</string>
    <string name="tt13">FAQ</string>
    <string name="tt14">Post Query</string>
    <string name="tt15">D-910,Signature-2 Business Park,</string>
    <string name="tt16">S.G. Highway, Sanand - Sarkhej Cross Rd,</string>
    <string name="tt17">Sarkhej,Ahmedabad,</string>
    <string name="tt18">+91 8401888243</string>
    <string name="tt19">contact@silverwingtechnologies.com</string>
    <string name="tt20">Email</string>
    <string name="tt21">Password</string>
    <string name="tt22">Login</string>
    <string name="tt23">Name</string>
    <string name="tt24">Confirm Password</string>
    <string name="tt26">Mobile No.</string>
    <string name="tt27">Register</string>
    <string name="tt28">Forgot Password?</string>
    <string name="tt29">New Here? Sign Up.</string>
    <string name="tt30">Description</string>
    <string name="tt31">Gujarat 382210</string>
    <string name="prefrence_file_name">Nav Drawer</string>
    <string name="tt25">Home</string>
    <string name="tt32">Gender</string>
</resources>
