<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.kaivanshah.testnavdrawer.ContactFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        android:textColor="#FFFFFF"
        android:text="@string/tt15"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingEnd="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        android:textColor="#FFFFFF"
        android:text="@string/tt16"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textColor="#FFFFFF"
        android:text="@string/tt17"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textColor="#FFFFFF"
        android:text="@string/tt31"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="5dp"
        android:onClick="callNow"
        android:textColor="#FFFFFF"
        android:text="@string/tt18"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="35dp"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="5dp"
        android:textColor="#FFFFFF"
        android:text="@string/tt19"
        android:textSize="20sp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
