<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context="com.example.kaivanshah.testnavdrawer.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/tt20"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingStart="20dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/tt21"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingStart="20dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:text="@string/tt22"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/tt28"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingStart="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/tt29"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingStart="20dp"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
