<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/mainbg"
    android:layout_height="match_parent"
    tools:context="com.example.kaivanshah.testnavdrawer.SignUpActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/tt23"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="24sp">

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/tt20"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/tt21"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/tt26"
                android:inputType="phone"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:text="@string/tt27"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/holo_blue_bright"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
